--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "@mlibai/native.js",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "A library for JavaScript interact with Native App.",
-  "main": "native/native.js",
+  "main": "Products/native.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "webpack",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "server": "webpack-dev-server --open"
   },
   "repository": {
     "type": "git",
@@ -22,5 +24,9 @@
   "bugs": {
     "url": "https://github.com/mlibai/native.js/issues"
   },
-  "homepage": "https://github.com/mlibai/native.js#readme"
+  "homepage": "https://github.com/mlibai/native.js#readme",
+  "devDependencies": {
+    "webpack": "^4.27.1",
+    "webpack-cli": "^3.1.2"
+  }
 }
