--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@mlibai/native.js",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "A library for JavaScript interact with Native App.",
-  "main": "Products/native.js",
+  "main": "native/index.js",
   "scripts": {
     "start": "webpack",
     "test": "echo \"Error: no test specified\" && exit 1",
