--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "@mlibai/native.js",
-  "version": "1.0.4",
+  "version": "2.0.0",
   "description": "A library for JavaScript interact with Native App.",
   "main": "native/index.js",
   "scripts": {
-    "start": "webpack",
+    "start": "webpack --mode production",
+    "debug": "webpack --mode development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "webpack-dev-server --open"
   },
