--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@mlibai/native.js",
   "version": "2.0.3",
   "description": "A library for JavaScript interact with Native App.",
-  "main": "native/native.js",
+  "main": "native/index.js",
   "scripts": {
     "start": "webpack --mode production",
     "debug": "webpack --mode development",
