--- a/native.extended/package.json
+++ b/native.extended/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "@mlibai/native.js",
+  "name": "@mlibai/native.extended.js",
   "version": "2.0.3",
   "description": "A library for JavaScript interact with Native App.",
-  "main": "native/index.js",
+  "main": "./js/index.js",
   "scripts": {
     "start": "webpack --mode production",
     "debug": "webpack --mode development",
