--- a/native.extended/package.json
+++ b/native.extended/package.json
@@ -29,7 +29,8 @@
   "homepage": "https://github.com/mlibai/native.js#readme",
   "devDependencies": {
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "@mlibai/native.js": "^3.1.0"
   },
   "dependencies": {
     "jsdoc": "^3.6.2"
