--- a/Example/native.extended/package.json
+++ b/Example/native.extended/package.json
@@ -12,10 +12,10 @@
   "dependencies": {
     "@mlibai/native.extended.js": "^3.1.0",
     "@mlibai/native.js": "^3.1.0",
-    "jquery": "^3.4.1",
-    "webpack": "^4.32.0"
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack": "^4.32.0"
   }
 }
