--- a/Example/native/package.json
+++ b/Example/native/package.json
@@ -11,10 +11,10 @@
   "license": "ISC",
   "dependencies": {
     "@mlibai/native.js": "^3.1.0",
-    "jquery": "^3.4.1",
-    "webpack": "^4.32.0"
+    "jquery": "^3.4.1"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.2"
+    "webpack-cli": "^3.3.2",
+    "webpack": "^4.32.0"
   }
 }
