--- a/native.extended/package.json
+++ b/native.extended/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@mlibai/native.extended.js",
-  "version": "3.1.0",
+  "version": "3.2.0",
   "description": "A library for JavaScript interact with Native App.",
   "main": "./js/index.js",
   "scripts": {
@@ -29,10 +29,9 @@
   "homepage": "https://github.com/mlibai/native.js#readme",
   "devDependencies": {
     "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "@mlibai/native.js": "^3.1.0"
+    "webpack-cli": "^3.3.2"
   },
   "dependencies": {
-    "jsdoc": "^3.6.2"
+    "@mlibai/native.js": "^3.1.0"
   }
 }
